--- a/src/scss/_macros/_form.scss
+++ b/src/scss/_macros/_form.scss
@@ -106,6 +106,9 @@ $form-notify-font-weight: bold;
   margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
+  @include adaptive(767) {
+    max-width: 100%;
+  }
 
   &.is-focus {}
 
@@ -114,6 +117,9 @@ $form-notify-font-weight: bold;
   &__group {
     display: flex;
     align-items: flex-start;
+    @include adaptive(575) {
+      flex-wrap: wrap;
+    }
 
     &--two,
     &--three {
@@ -123,6 +129,9 @@ $form-notify-font-weight: bold;
     &--two {
       .c-form__group-col {
         width: calc((100% - #{$form-field-group-two-margin}) / 2);
+        @include adaptive(575) {
+          width: 100%;
+        }
       }
     }
 
