--- a/src/scss/_shared/_swiper.scss
+++ b/src/scss/_shared/_swiper.scss
@@ -171,6 +171,10 @@
           line-height: 1.67;
           letter-spacing: -0.7px;
           color: #ffffff;
+          @include adaptive(575) {
+            font-size: 22px;
+            line-height: 1.4;
+          }
         }
 
         &-desc {
@@ -270,6 +274,9 @@
         max-width: 600px;
         @include adaptive(1365) {
           height: auto;
+        }
+        @include adaptive(575) {
+          padding: 30px 20px;
         }
 
         &-active {
