--- a/src/scss/_components/are/_work.scss
+++ b/src/scss/_components/are/_work.scss
@@ -91,6 +91,17 @@
 
     &-0 {
       height: 384px;
+
+      &:after {
+        content: '';
+        opacity: 0.8;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: linear-gradient(to bottom, #00000000, #00000023 30%, #00000042 50%, #00000085 70%, #000000cc 90%, #000000e1 96%, #000000);
+      }
     }
 
     &-1 {
